k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dc-analytics
  namespace: iris
spec:
  selector:
    app: dc-analytics
  ports:
  - name: web
    protocol: TCP
    port: 52773
    targetPort: 52773
  - name: super
    protocol: TCP
    port: 51773
    targetPort: 51773
  type: NodePort
