k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: dc-analytics
    kubernetes.io/ingress.global-static-ip-name: dc-analytics
  name: dc-analytics
  namespace: iris
spec:
  rules:
  - host: public-analytics.community.intersystems.com
    http:
      paths:
      - backend:
          serviceName: dc-analytics
          servicePort: 52773
        path: /*
